--- a/src/Blazor.Chat/Blazor.Chat.Client/wwwroot/index.html
+++ b/src/Blazor.Chat/Blazor.Chat.Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,9 +8,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
-<body>
-    <app>Loading...</app>
-
+<body class="bg-light menu-active">
+    <app>Loading... É</app>
     <script src="_framework/components.webassembly.js"></script>
 </body>
 </html>
